packages/jsii/test/negatives/neg.static-method-name.1.ts
export class MyClass {
  MethodIsNotCamelCase() {
    return 'hi';
  }
}
